fixed overflow on pair items

--- a/src/styles/_generator.scss
+++ b/src/styles/_generator.scss
@@ -1,7 +1,7 @@
 .generator-wrap {
   margin: 0px auto;
   color: black;
-  max-width: 600px;
+  min-width: 300px;
 
   .main-img {
     width: 200px;
