--- a/src/styles/_pair-item.scss
+++ b/src/styles/_pair-item.scss
@@ -1,6 +1,6 @@
 .pair-item {
   list-style-type: none;
-  width: 300px;
+  min-width: 300px;
   margin: 0 auto;
 
   li {
